--- a/src/containers/MasterView/SearchPanel.css
+++ b/src/containers/MasterView/SearchPanel.css
@@ -36,7 +36,7 @@
 
 @media (min-width: 576px) {
     .kgs-search.is-fixed-position {
-        padding: 15px 50px;
+        padding: 15px var(--site-margin);
     }
 }
 
