--- a/src/containers/MasterView/SortingSelector.css
+++ b/src/containers/MasterView/SortingSelector.css
@@ -43,7 +43,7 @@
     color: var(--color-selected-1);
     font-size: 22px;
     font-weight: normal;
-    padding: 9px 50px 9px 25px;
+    padding: 9px var(--site-margin) 9px 25px;
     cursor: pointer;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
